--- a/mapping.json
+++ b/mapping.json
@@ -1,15 +1,20 @@
 {
-  "settings" : {
-    "number_of_shards" : 2,
-    "number_of_replicas" : 1,
+  "settings": {
+    "number_of_shards": 2,
+    "number_of_replicas": 1,
     "index": {
       "analysis": {
         "analyzer": {
           "myCustomAnalyzer": {
             "type": "custom",
             "tokenizer": "myCustomTokenizer",
-            "filter": ["myCustomFilter1", "myCustomFilter2"],
-            "char_filter": ["myCustomCharFilter"]
+            "filter": [
+              "myCustomFilter1",
+              "myCustomFilter2"
+            ],
+            "char_filter": [
+              "myCustomCharFilter"
+            ]
           }
         },
         "tokenizer": {
@@ -17,11 +22,10 @@
             "type": "letter"
           },
           "myCustomNGramTokenizer": {
-            "type" : "ngram",
-            "min_gram" : 2,
-            "max_gram" : 3
+            "type": "ngram",
+            "min_gram": 2,
+            "max_gram": 3
           }
-
         },
         "filter": {
           "myCustomFilter1": {
@@ -34,76 +38,87 @@
         "char_filter": {
           "myCustomCharFilter": {
             "type": "mapping",
-            "mappings": ["ph=>f", " u => you ", "ES=>Elasticsearch"]
+            "mappings": [
+              "ph=>f",
+              " u => you ",
+              "ES=>Elasticsearch"
+            ]
           }
         }
       }
     }
   },
-  "mappings" : {
-    "group" : {
-      "_source" : {
-        "enabled" : true
+  "mappings": {
+    "_docs": {
+      "_source": {
+        "enabled": true
       },
-      "_all" : {
-        "enabled" : true
+      "_all": {
+        "enabled": true
       },
-      "properties" : {
-        "organizer" : { "type" : "text" },
-        "name" : { "type" : "text" },
-        "description" : {
-          "type" : "text",
+      "properties": {
+        "organizer": {
+          "type": "text"
+        },
+        "name": {
+          "type": "text"
+        },
+        "description": {
+          "type": "text",
           "term_vector": "with_positions_offsets"
         },
-        "created_on" : {
-          "type" : "date",
-          "format" : "yyyy-MM-dd"
+        "created_on": {
+          "type": "date",
+          "format": "yyyy-MM-dd"
         },
-        "tags" : {
-          "type" : "text",
-          "index" : "analyzed",
-          "fields": {  
-            "verbatim" : {
-              "type" : "text",
-              "index" : "not_analyzed"
+        "tags": {
+          "type": "text",
+          "index": "analyzed",
+          "fields": {
+            "verbatim": {
+              "type": "text",
+              "index": "not_analyzed"
             }
           }
         },
-        "members" : { "type" : "text" },
-        "location_group" : { "type" : "text" }
-      }
-    },
-    "event" : {
-      "_source" : {
-        "enabled" : true
-      },
-      "_all" : {
-        "enabled" : false
-      },
-      "_parent" : {
-        "type" : "group"
-      },
-      "properties" : {
-        "host" : { "type" : "text" },
-        "title" : { "type" : "text" },
-        "description" : {
-          "type" : "text",
-          "term_vector": "with_positions_offsets"
+        "members": {
+          "type": "text"
         },
-        "attendees" : { "type" : "text" },
-        "date" : {
-          "type" : "date",
-          "format" : "date_hour_minute"
+        "location_group": {
+          "type": "text"
         },
-        "reviews" : {
-          "type" : "integer",
-          "null_value" : 0
+        "host": {
+          "type": "text"
+        },
+        "title": {
+          "type": "text"
+        },
+        "attendees": {
+          "type": "text"
+        },
+        "date": {
+          "type": "date",
+          "format": "date_hour_minute"
+        },
+        "reviews": {
+          "type": "integer",
+          "null_value": 0
+        },
+        "joinField": { 
+          "type": "join",
+          "relations": {
+            "group": "event" 
+          }
         },
         "location_event": {
-          "type" : "object",
-          "properties" : {
-            "name" : { "type" : "text" },
-            "geolocation" : { "type" : "geo_point" }
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "text"
+            },
+            "geolocation": {
+              "type": "geo_point"
+            }
           }
         }
       }
