--- a/mapping.json
+++ b/mapping.json
@@ -73,7 +73,7 @@
         },
         "tags": {
           "type": "text",
-          "index": "analyzed",
+          "index": true,
           "fields": {
             "verbatim": {
               "type": "text",
